# Livraria-Django

./: db.sqlite3  package-lock.json  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py
livraria/migrations/: 0002_compra.py  0003_itenscompra.py
livraria/models/: __init__.py
livraria/serializers/: __init__.py  compra.py  livro.py
livraria/views/: __init__.py
uploader/migrations/: 0001_initial.py
